--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,11 @@ version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
+bootJar {
+    baseName = 'expenses-rest-service'
+    version =  '0.1.0'
+}
+
 repositories {
     mavenCentral()
 }
