--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,13 @@ bootJar {
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('com.jayway.jsonpath:json-path')
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testCompile 'com.jayway.jsonpath:json-path'
+    testCompile 'org.mockito:mockito-core:2.+'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
